# fiui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: fiuiConfig.cmake.in
doc/: 2026-06-10-fiui-framework-design.md  2026-06-11-fiui-v0-implementation-plan.md  2026-06-11-fiui-v0-runtime-architecture.md  2026-06-17-fiui-release-checklist.md  2026-06-17-fiui-stabilization-plan.md  2026-06-17-fiui-v0-control-contract.md  2026-06-18-fiui-v0-alpha-distribution.md
docs/superpowers/specs/: 2026-06-10-fiui-framework-design.md
examples/control_center_demo/: generate_assets.py  main.cpp
examples/diagnostics_demo/: main.cpp
examples/hello/: main.cpp
examples/settings_panel/: main.cpp
include/fiui/: app.h  diagnostics.h  export.h  fiui.h  style.h  types.h  widget.h
scripts/: verify.ps1
src/app/: app.cpp
src/backend/: d3d11_backend.cpp  d3d11_backend.h
src/core/: widget_impl.cpp  widget_impl.h
src/diagnostics/: diagnostics.cpp  diagnostics_internal.h
src/dirty/: dirty_tracker.cpp  dirty_tracker.h
src/event/: event_system.cpp  event_system.h
src/image/: image_system.cpp  image_system.h
src/layout/: layout_system.cpp  layout_system.h
src/menu/: menu_system.cpp  menu_system.h
src/platform/: platform_system.cpp  platform_system.h
src/render/: frame.cpp  render_system.cpp  render_system.h
src/resource/: resource_system.cpp  resource_system.h
src/runtime/: runtime.cpp  runtime.h
src/scheduler/: frame_scheduler.cpp  frame_scheduler.h
src/style/: style.cpp  style_system.cpp  style_system.h
src/text/: text_system.cpp  text_system.h
src/widget/: widget.cpp
tests/core/: core_tests.cpp
tests/package_smoke/: CMakeLists.txt  main.cpp
tests/stability/: stability_tests.cpp
